--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Document</title>
+    <title>Basel Parkplatz</title>
 </head>
 <body>
-    <h1>Basler Parkhaus</h1>
-    <P></P>
+    <h1>Basel parkplatz</h1>
+    <P>Finde den perfekten Parkplatz in Basel. Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</P>
     <script src="js/script.js"></script>
 </body>
 </html>
