--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Basel parkplatz</h1>
-    <P>Finde den perfekten Parkplatz in Basel. Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</P>
+    <P>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</P>
     <script src="js/script.js"></script>
 </body>
 </html>
