--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Basel parkplatz</h1>
+    <img src="" alt="">
     <P>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</P>
     <script src="js/script.js"></script>
+    <button>Ready</button>
 </body>
 </html>
