--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Basel Parkplatz</title>
 </head>
 <body>
-    <h1>Basel parkplatz</h1>
-    <img src="" alt="">
-    <P>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</P>
+    <h1>Basel Prkplatz</h1>
+    <img src="" alt="logo-basel-parkplatz">
+    <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
+    <p id="button.ready">Ready</p>
+
     <script src="js/script.js"></script>
-    <button>Ready</button>
 </body>
 </html>
