--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Basel Prkplatz</h1>
     <img src="" alt="logo-basel-parkplatz">
     <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
-    <p id="button.ready">Ready</p>
+    <p id="button-ready">Ready</p>
 
     <script src="js/script.js"></script>
 </body>
