--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
     <p id="button-ready">Ready</p>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
