--- a/index.html
+++ b/index.html
@@ -7,10 +7,57 @@
     <title>Basel Parkplatz</title>
 </head>
 <body>
-    <h1>Basel Prkplatz</h1>
-    <img src="" alt="logo-basel-parkplatz">
-    <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
-    <p id="button-ready">Ready</p>
+    <section class="head">
+        <img src="img/Logo-Basel-Parkhaus.png" alt="logo-basel-parkplatz" id="logo">
+        <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
+        <p id="button-ready">READY?</p>
+    </section>    
+    
+
+    <section id="street">
+    </section>
+
+    <section class="section-parkhaus-links">
+        <div class="parkhaus-flaeche">
+            <img src="img/Icon-Parkhaus.svg" alt="icon-parkhaus" id="icon-parkhaus">
+            <h2>Parkhaus Europe</h2>
+            <div class="status">
+            </div>
+        </div>
+    </section>
+
+    <section class="section-parkhaus-rechts">
+        <div class="parkhaus-flaeche">
+            <img src="img/Icon-Parkhaus.svg" alt="icon-parkhaus" id="icon-parkhaus">
+            <h2>Parkhaus Clarahuus</h2>
+            <div class="status">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="section-parkhaus-rechts">
+        <div class="parkhaus-flaeche">
+            <img src="img/Icon-Parkhaus.svg" alt="icon-parkhaus" id="icon-parkhaus">
+            <h2>Parkhaus Rebgasse</h2>
+            <div class="status">
+            </div>
+        </div>
+    </section>
+
+    <section class="section-parkhaus-links">
+        <div class="parkhaus-flaeche">
+            <img src="img/Icon-Parkhaus.svg" alt="icon-parkhaus" id="icon-parkhaus">
+            <h2>Parkhaus Storchen</h2>
+            <div class="status">
+            </div>
+        </div>
+    </section>
+
+    <div class="button">
+        <button id="button">ZURÜCK</button>
+    </div>
+    
 
     <script type="module" src="js/script.js"></script>
 </body>
