--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     </section>    
     
 
-    <section id="street">
-    </section>
+    <section class="section-strasse">
+        <div class="strasse"></div>
+      </section>
+      
+  
 
     <section class="section-parkhaus-links">
         <div class="parkhaus-flaeche">
