--- a/index.html
+++ b/index.html
@@ -20,18 +20,25 @@
           </section>               
     </section>    
 
+
     <section class="section_strasse">
         <div class="strasse"></div>
     </section>
       
-  
+<dialog id="parkhausDialog">
+  <form method="dialog">
+    <button class="close" aria-label="Schließen">&times;</button>
+    <p id="dialog-text">Parkhaus-Info</p>
+  </form>
+</dialog>
+
     <section class="section_parkhaus_links">
-        <div class="parkhaus_und_highlight">
-          <div class="parkhaus_flaeche">
+         <div class="parkhaus_und_highlight">
             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" id="icon_parkhaus">
-            <h2>Parkhaus Europe</h2>
-            <div class="status"></div>
+             <h2>Parkhaus Europe</h2>
+             <div class="status"></div>
     </section>
+
 
     <section class="section_highlights">
          </div>
@@ -41,12 +48,12 @@
 
     <section class="section_parkhaus_rechts">
         <div class="parkhaus_flaeche">
-            <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" id="icon_parkhaus">
-            <h2>Parkhaus Clarahuus</h2>
-            <div class="status"></div>
+             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" id="icon_parkhaus">
+             <h2>Parkhaus Clarahuus</h2>
+             <div class="status"></div>
         </div>
     </section>
-    
+
 
      <section class="section_parkhaus_rechts">
         <div class="parkhaus_und_highlight">
@@ -71,7 +78,7 @@
     <section class="section_parkhaus_links">
         <div class="parkhaus_flaeche">
             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" id="icon_parkhaus">
-            <h2>Parkhaus Storchen</h2>
+             <h2>Parkhaus Storchen</h2>
             <div class="status">
             </div>
         </div>
