--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
 
     <section class="section_strasse">
         <div class="strasse"></div>
-    </section>
-      
-    <dialog id="parkhaus-dialog">
-        <button id="dialog-close">✖</button>
-         <div id="dialog-content">
-             <!-- Parkhausdaten kommen hier rein -->
+        <div class="auto">
+            <img src="img/Auto.svg" alt="Auto">
         </div>
-    </dialog>
-    
+    </section>
+
+
     <section class="section_parkhaus_links">
         <button id="baselparkhauseurope" class="parkhaus_flaeche" type="button">
             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" id="icon_parkhaus">
