--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <section class="head" id="start">
         <img src="img/Logo-Basel-Parkhaus.png" alt="logo basel parkplatz" id="logo">
         <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
-        <p id="button-ready">READY?</p>
-        <section class="animation">
-            <div class="first"><div>Ready?</div></div>
-            <div class="second"><div>Set</div></div>
-            <div class="third"><div>Goo!</div></div>
-            <div class="fourth"><div><button class="ready-button">READY?</button></div></div>
-          </section>               
+
+        <div class="inner_heading">
+            <span>
+              READY? <br/>
+              SET <br/>
+              GOO! <br/>
+            </span>
+          </div>           
     </section>    
 
 
