ready button nochmal:)

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
     <section class="head" id="start">
         <img src="img/Logo-Basel-Parkhaus.png" alt="logo basel parkplatz" id="logo">
         <p>Finde den perfekten Parkplatz in Basel.<br>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
-
-        <div class="inner_heading">
-            <span>
-              READY? <br/>
-              SET <br/>
-              GOO! <br/>
-            </span>
-          </div>           
+        
+        <div class="hintergrund">
+            <div class="inner_heading">
+             <span>
+                 READY? <br/>
+                 SET <br/>
+                 GOO! <br/>
+             </span>
+            </div>  
+        </div>         
     </section>    
 
 
