--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header" id="start">
         <img src="img/Logo-Basel-Parkhaus.png" alt="logo basel parkplatz" id="logo">
-        <div class="fonts"><h1>Finde dein Slot</h1>
+        <div class="fonts"><h1>Finde deinen Slot</h1>
         <p>Scrolle zum gewünschten Parkhaus, klicke es an und erhalte die Live-Daten zur Auslastung.</p>
         </div>
 
