--- a/index.html
+++ b/index.html
@@ -105,5 +105,14 @@
 
 
 <script type="module" src="js/script.js"></script>
+<dialog id="parkhaus-dialog">
+  <div class="dialog-header">
+    <h3 id="dialog-title">Parkhaus Titel</h3>
+    <button id="dialog-close">&times;</button>
+  </div>
+  <div class="dialog-content">
+    <p id="dialog-content">Inhalt des Dialogs</p>
+  </div>
+</dialog>
 </body>
 </html>
