--- a/index.html
+++ b/index.html
@@ -85,6 +85,46 @@
     <nav class="button" >
         <a href="#start" class="button_hg">Zurück</a>
     </nav>
+
+    <!-- Pop-up for Parkhaus Europe -->
+    <div id="popup-europe" class="popup">
+        <div class="popup-content">
+        <span class="close" data-close="popup-europe">&times;</span>
+        <h2 class="popup-title"></h2>
+        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+        <p>Auslastung: <span class="auslastung"></span>%</p>
+        </div>
+    </div>
+
+    <!-- Pop-up for Parkhaus Clarahuus -->
+    <div id="popup-clarahuus" class="popup">
+        <div class="popup-content">
+        <span class="close" data-close="popup-clarahuus">&times;</span>
+        <h2 class="popup-title"></h2>
+        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+        <p>Auslastung: <span class="auslastung"></span>%</p>
+        </div>
+    </div>
+
+    <!-- Pop-up for Parkhaus Rebgasse -->
+    <div id="popup-rebgasse" class="popup">
+        <div class="popup-content">
+        <span class="close" data-close="popup-rebgasse">&times;</span>
+        <h2 class="popup-title"></h2>
+        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+        <p>Auslastung: <span class="auslastung"></span>%</p>
+        </div>
+    </div>
+
+    <!-- Pop-up for Parkhaus Storchen -->
+    <div id="popup-storchen" class="popup">
+        <div class="popup-content">
+        <span class="close" data-close="popup-storchen">&times;</span>
+        <h2 class="popup-title"></h2>
+        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+        <p>Auslastung: <span class="auslastung"></span>%</p>
+        </div>
+    </div>
 </main>
 
 <footer class="footer">
@@ -105,14 +145,5 @@
 
 
 <script type="module" src="js/script.js"></script>
-<dialog id="parkhaus-dialog">
-  <div class="dialog-header">
-    <h3 id="dialog-title">Parkhaus Titel</h3>
-    <button id="dialog-close">&times;</button>
-  </div>
-  <div class="dialog-content">
-    <p id="dialog-content">Inhalt des Dialogs</p>
-  </div>
-</dialog>
 </body>
 </html>
