--- a/index.html
+++ b/index.html
@@ -89,40 +89,60 @@
     <!-- Pop-up for Parkhaus Europe -->
     <div id="popup-europe" class="popup">
         <div class="popup-content">
-        <span class="close" data-close="popup-europe">&times;</span>
-        <h2 class="popup-title"></h2>
-        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
-        <p>Auslastung: <span class="auslastung"></span>%</p>
+            <span class="close" data-close="popup-europe">&times;</span>
+            <h2 class="popup-title"></h2>
+            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <div class="auslastung-bar-container">
+             <div class="auslastung-bar"></div>
+            </div>
+            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Status: <span class="status-text"></span></p>
+            <p>Adresse: <span class="adresse"></span></p>
         </div>
     </div>
 
     <!-- Pop-up for Parkhaus Clarahuus -->
     <div id="popup-clarahuus" class="popup">
         <div class="popup-content">
-        <span class="close" data-close="popup-clarahuus">&times;</span>
-        <h2 class="popup-title"></h2>
-        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
-        <p>Auslastung: <span class="auslastung"></span>%</p>
+            <span class="close" data-close="popup-clarahuus">&times;</span>
+            <h2 class="popup-title"></h2>
+            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <div class="auslastung-bar-container">
+                <div class="auslastung-bar"></div>
+            </div>
+            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Status: <span class="status-text"></span></p>
+            <p>Adresse: <span class="adresse"></span></p>
         </div>
     </div>
 
-    <!-- Pop-up for Parkhaus Rebgasse -->
+    <!-- Pop-up Parkhaus Rebgasse -->
     <div id="popup-rebgasse" class="popup">
         <div class="popup-content">
-        <span class="close" data-close="popup-rebgasse">&times;</span>
-        <h2 class="popup-title"></h2>
-        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
-        <p>Auslastung: <span class="auslastung"></span>%</p>
+            <span class="close" data-close="popup-rebgasse">&times;</span>
+            <h2 class="popup-title"></h2>
+            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <div class="auslastung-bar-container">
+                <div class="auslastung-bar"></div>
+            </div>
+            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Status: <span class="status-text"></span></p>
+            <p>Adresse: <span class="adresse"></span></p>
         </div>
     </div>
 
-    <!-- Pop-up for Parkhaus Storchen -->
+    <!-- Pop-up Parkhaus Storchen -->
     <div id="popup-storchen" class="popup">
         <div class="popup-content">
-        <span class="close" data-close="popup-storchen">&times;</span>
-        <h2 class="popup-title"></h2>
-        <p>Freie Plätze: <span class="freie_plaetze"></span></p>
-        <p>Auslastung: <span class="auslastung"></span>%</p>
+            <span class="close" data-close="popup-storchen">&times;</span>
+            <h2 class="popup-title"></h2>
+            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <div class="auslastung-bar-container">
+                <div class="auslastung-bar"></div>
+            </div>
+            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Status: <span class="status-text"></span></p>
+            <p>Adresse: <span class="adresse"></span></p>
         </div>
     </div>
 </main>
