--- a/index.html
+++ b/index.html
@@ -86,31 +86,31 @@
         <a href="#start" class="button_hg">Zurück</a>
     </nav>
 
-    <!-- Pop-up for Parkhaus Europe -->
+    <!-- Pop-up Parkhaus Europe -->
     <div id="popup-europe" class="popup">
         <div class="popup-content">
             <span class="close" data-close="popup-europe">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
              <div class="auslastung-bar"></div>
             </div>
-            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
             <p>Adresse: <span class="adresse"></span></p>
         </div>
     </div>
 
-    <!-- Pop-up for Parkhaus Clarahuus -->
+    <!-- Pop-up Parkhaus Clarahuus -->
     <div id="popup-clarahuus" class="popup">
         <div class="popup-content">
             <span class="close" data-close="popup-clarahuus">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar"></div>
             </div>
-            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
             <p>Adresse: <span class="adresse"></span></p>
         </div>
@@ -121,11 +121,11 @@
         <div class="popup-content">
             <span class="close" data-close="popup-rebgasse">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar"></div>
             </div>
-            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
             <p>Adresse: <span class="adresse"></span></p>
         </div>
@@ -136,11 +136,11 @@
         <div class="popup-content">
             <span class="close" data-close="popup-storchen">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung"></span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar"></div>
             </div>
-            <p>Freie Plätze: <span class="freie_plaetze"></span></p>
+            <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
             <p>Adresse: <span class="adresse"></span></p>
         </div>
