--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <div class="popup-content">
             <span class="close" data-close="popup-europe">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent">--</span>%</p>
             <div class="auslastung-bar-container">
              <div class="auslastung-bar"></div>
             </div>
-            <p>Freie Plätze: <span class="free"></span></p>
-            <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="adresse"></span></p>
+            <p>Freie Plätze: <span class="free">--</span></p>
+            <p>Status: <span class="status-text">data loading</span></p>
+            <p>Adresse: <span class="address">data loading</span></p>
         </div>
     </div>
 
@@ -112,7 +112,7 @@
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="adresse"></span></p>
+            <p>Adresse: <span class="address"></span></p>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="adresse"></span></p>
+            <p>Adresse: <span class="address"></span></p>
         </div>
     </div>
 
@@ -142,7 +142,7 @@
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="adresse"></span></p>
+            <p>Adresse: <span class="address"></span></p>
         </div>
     </div>
 </main>
