--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
     </div>
   </footer>
 
-
-<script type="module" src="js/script.js"></script>
+<script src="js/script.js" type="module"></script>
 </body>
 </html>
