--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
         <div class="popup-content">
             <span class="close" data-close="popup-europe">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent">--</span>%</p>
+            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
-             <div class="auslastung-bar"></div>
+                <div class="auslastung-bar">
+                      <div class="regulator"></div>
+                </div>
             </div>
-            <p>Freie Plätze: <span class="free">--</span></p>
-            <p>Status: <span class="status-text">data loading</span></p>
-            <p>Adresse: <span class="address">data loading</span></p>
+            <p>Freie Plätze: <span class="free"></span></p>
+            <p>Status: <span class="status-text"></span></p>
+            <p>Adresse: <span class="address"></span></p>
         </div>
     </div>
 
@@ -108,7 +110,9 @@
             <h2 class="popup-title"></h2>
             <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
-                <div class="auslastung-bar"></div>
+                <div class="auslastung-bar">
+                    <div class="regulator"></div>
+                </div>
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
@@ -123,7 +127,9 @@
             <h2 class="popup-title"></h2>
             <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
-                <div class="auslastung-bar"></div>
+                <div class="auslastung-bar">
+                    <div class="regulator"></div>
+                </div>
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
@@ -138,7 +144,9 @@
             <h2 class="popup-title"></h2>
             <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
             <div class="auslastung-bar-container">
-                <div class="auslastung-bar"></div>
+                <div class="auslastung-bar">
+                    <div class="regulator"></div>
+                </div>
             </div>
             <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
