--- a/index.html
+++ b/index.html
@@ -91,15 +91,19 @@
         <div class="popup-content">
             <span class="close" data-close="popup-europe">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            <div class="popup-row">
+                <p>Auslastung:</p>
+            </div>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar">
-                      <div class="regulator"></div>
+                      <div class="regulator"> <span class="auslastung_prozent"></span>%</div>
                 </div>
             </div>
-            <p>Freie Plätze: <span class="free"></span></p>
-            <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="address"></span></p>
+            <div class="popup-row">
+                <p>Freie Plätze: <span class="free"></span></p>
+                <p>Status: <span class="status-text"></span></p>
+                <p>Adresse: <span class="address"></span></p>
+            </div>
         </div>
     </div>
 
@@ -108,15 +112,19 @@
         <div class="popup-content">
             <span class="close" data-close="popup-clarahuus">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            <div class="popup-row">
+                 <p>Auslastung:</p>
+            </div>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar">
-                    <div class="regulator"></div>
+                    <div class="regulator"> <span class="auslastung_prozent"></span>%</div>
                 </div>
             </div>
-            <p>Freie Plätze: <span class="free"></span></p>
-            <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="address"></span></p>
+             <div class="popup-row">
+                <p>Freie Plätze: <span class="free"></span></p>
+                <p>Status: <span class="status-text"></span></p>
+                <p>Adresse: <span class="address"></span></p>
+             </div>
         </div>
     </div>
 
@@ -125,15 +133,19 @@
         <div class="popup-content">
             <span class="close" data-close="popup-rebgasse">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            <div class="popup-row">
+                <p>Auslastung:</p>
+            </div>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar">
-                    <div class="regulator"></div>
+                    <div class="regulator"><span class="auslastung_prozent"></span>%</div>
                 </div>
             </div>
-            <p>Freie Plätze: <span class="free"></span></p>
+            <div class="popup-row">
+                 <p>Freie Plätze: <span class="free"></span></p>
             <p>Status: <span class="status-text"></span></p>
             <p>Adresse: <span class="address"></span></p>
+            </div>
         </div>
     </div>
 
@@ -142,17 +154,22 @@
         <div class="popup-content">
             <span class="close" data-close="popup-storchen">&times;</span>
             <h2 class="popup-title"></h2>
-            <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            <div class="popup-row">
+                <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+            </div>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar">
-                    <div class="regulator"></div>
+                    <div class="regulator"><span class="auslastung_prozent"></span>%</div>
                 </div>
             </div>
-            <p>Freie Plätze: <span class="free"></span></p>
-            <p>Status: <span class="status-text"></span></p>
-            <p>Adresse: <span class="address"></span></p>
+            <div class="popup-row">
+                <p>Freie Plätze: <span class="free"></span></p>
+                <p>Status: <span class="status-text"></span></p>
+                <p>Adresse: <span class="address"></span></p>
+            </div>
         </div>
     </div>
+
 </main>
 
 <footer class="footer">
