--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <span class="close" data-close="popup-storchen">&times;</span>
             <h2 class="popup-title"></h2>
             <div class="popup-row">
-                <p>Auslastung: <span class="auslastung_prozent"></span>%</p>
+                <p>Auslastung:</p>
             </div>
             <div class="auslastung-bar-container">
                 <div class="auslastung-bar">
