--- a/index.html
+++ b/index.html
@@ -86,77 +86,78 @@
         <a href="#start" class="button_hg">Zurück</a>
     </nav>
 
+    
     <!-- Pop-up Parkhaus Europe -->
-    <div id="popup-europe" class="popup">
-        <div class="popup-content">
-            <span class="close" data-close="popup-europe">&times;</span>
-            <h2 class="popup-title"></h2>
-            <div class="popup-row">
+    <div id="popup_europe" class="popup">
+        <div class="popup_content">
+            <span class="close" data-close="popup_europe">&times;</span>
+            <h2 class="popup_title"></h2>
+            <div class="popup_text">
                 <p>Auslastung:</p>
             </div>
-            <div class="auslastung-bar-container">
+            <div class="auslastung_bar_container">
                 <div class="regulator"> <span class="auslastung_prozent"></span>%</div>
             </div>
-            <div class="popup-row">
+            <div class="popup_text">
                 <p>Freie Plätze: <span class="free"></span></p>
-                <p>Status: <span class="status-text"></span></p>
+                <p>Status: <span class="status_text"></span></p>
                 <p>Adresse: <span class="address"></span></p>
             </div>
         </div>
     </div>
 
     <!-- Pop-up Parkhaus Clarahuus -->
-    <div id="popup-clarahuus" class="popup">
-        <div class="popup-content">
-            <span class="close" data-close="popup-clarahuus">&times;</span>
-            <h2 class="popup-title"></h2>
-            <div class="popup-row">
+    <div id="popup_clarahuus" class="popup">
+        <div class="popup_content">
+            <span class="close" data-close="popup_clarahuus">&times;</span>
+            <h2 class="popup_title"></h2>
+            <div class="popup_text">
                  <p>Auslastung:</p>
             </div>
-            <div class="auslastung-bar-container">
+            <div class="auslastung_bar_container">
                 <div class="regulator"> <span class="auslastung_prozent"></span>%</div>
             </div>
-             <div class="popup-row">
+             <div class="popup_text">
                 <p>Freie Plätze: <span class="free"></span></p>
-                <p>Status: <span class="status-text"></span></p>
+                <p>Status: <span class="status_text"></span></p>
                 <p>Adresse: <span class="address"></span></p>
              </div>
         </div>
     </div>
 
     <!-- Pop-up Parkhaus Rebgasse -->
-    <div id="popup-rebgasse" class="popup">
-        <div class="popup-content">
-            <span class="close" data-close="popup-rebgasse">&times;</span>
-            <h2 class="popup-title"></h2>
-            <div class="popup-row">
+    <div id="popup_rebgasse" class="popup">
+        <div class="popup_content">
+            <span class="close" data-close="popup_rebgasse">&times;</span>
+            <h2 class="popup_title"></h2>
+            <div class="popup_text">
                 <p>Auslastung:</p>
             </div>
-            <div class="auslastung-bar-container">
+            <div class="auslastung_bar_container">
                 <div class="regulator"><span class="auslastung_prozent"></span>%</div>
             </div>
-            <div class="popup-row">
+            <div class="popup_text">
                  <p>Freie Plätze: <span class="free"></span></p>
-            <p>Status: <span class="status-text"></span></p>
+            <p>Status: <span class="status_text"></span></p>
             <p>Adresse: <span class="address"></span></p>
             </div>
         </div>
     </div>
 
     <!-- Pop-up Parkhaus Storchen -->
-    <div id="popup-storchen" class="popup">
-        <div class="popup-content">
-            <span class="close" data-close="popup-storchen">&times;</span>
-            <h2 class="popup-title"></h2>
-            <div class="popup-row">
+    <div id="popup_storchen" class="popup">
+        <div class="popup_content">
+            <span class="close" data-close="popup_storchen">&times;</span>
+            <h2 class="popup_title"></h2>
+            <div class="popup_text">
                 <p>Auslastung:</p>
             </div>
-            <div class="auslastung-bar-container">
+            <div class="auslastung_bar_container">
                 <div class="regulator"><span class="auslastung_prozent"></span>%</div>
             </div>
-            <div class="popup-row">
+            <div class="popup_text">
                 <p>Freie Plätze: <span class="free"></span></p>
-                <p>Status: <span class="status-text"></span></p>
+                <p>Status: <span class="status_text"></span></p>
                 <p>Adresse: <span class="address"></span></p>
             </div>
         </div>
