--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="#start" class="button_hg">Zurück</a>
     </nav>
 
-    
+
     <!-- Pop-up Parkhaus Europe -->
     <div id="popup_europe" class="popup">
         <div class="popup_content">
@@ -165,7 +165,18 @@
 
 </main>
 
-
+<footer class="footer">
+    <div class="footer_left">
+        <img src="img/Logo-Basel-Parkhaus.png" alt="Basel Parkhaus Logo" class="footer_logo">
+    </div>
+    <div class="footer_center">
+        <p class="footer_title">Basel Parkhäuser</p>
+    </div>
+    <div class="footer_right">
+        <p class="footer_phone">+41 79 123 45 67</p>
+        <p class="footer_email">mail@basel-parkhaeuser.ch</p>
+    </div>
+</footer>
 
 <script src="js/script.js" type="module"></script>
 </body>
