--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <img src="img/Logo-Basel-Parkhaus.png" alt="Basel Parkhaus Logo" class="footer_logo">
     </div>
     <div class="footer_center">
-        <p class="footer_title">Basel Parkhäuser</p>
+        <h3 class="footer_title">Basel Parkhäuser</h3>
     </div>
     <div class="footer_right">
         <p class="footer_phone">+41 79 123 45 67</p>
