--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="hintergrund">
             <div class="inner_heading">
              <span>
-                 READY? <br/>
-                 SET <br/>
-                 GOO! <br/>
+                 Ready? <br/>
+                 Set <br/>
+                 Goo! <br/>
              </span>
             </div>  
         </div>         
@@ -167,7 +167,9 @@
 
 <footer class="footer">
     <div class="footer_left">
+        <a href="#start">
         <img src="img/Logo-Basel-Parkhaus.png" alt="Basel Parkhaus Logo" class="footer_logo">
+        </a>
     </div>
     <div class="footer_center">
         <h3 class="footer_title">Basel Parkhäuser</h3>
