--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="section_parkhaus_links">
         <button id="baselparkhauseurope" class="parkhaus_flaeche" type="button">
             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" class="icon_parkhaus">
-             <h2>Parkhaus Europe</h2>
+             <span class="titel_parkhaus">Parkhaus Europe</span>
             <div class="status"></div>
         </button>
     </section>
@@ -49,7 +49,7 @@
     <section class="section_parkhaus_rechts">
         <button id="baselparkhausclarahuus" class="parkhaus_flaeche" type="button">
              <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" class="icon_parkhaus">
-             <h2>Parkhaus Clarahuus</h2>
+             <span class="titel_parkhaus">Parkhaus Clarahuus</span>
              <div class="status"></div>
         </button>
     </section>
@@ -58,7 +58,7 @@
      <section class="section_parkhaus_rechts">
             <button id="baselparkhausrebgasse" class="parkhaus_flaeche" type="button">
                 <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" class="icon_parkhaus">
-                <h2>Parkhaus Rebgasse</h2>
+                <span class="titel_parkhaus">Parkhaus Rebgasse</span>
                 <div class="status"></div>
             </button>
     </section>
@@ -77,7 +77,7 @@
     <section class="section_parkhaus_links">
         <button id="baselparkhausstorchen" class="parkhaus_flaeche" type="button">
             <img src="img/Icon-Parkhaus.svg" alt="icon parkhaus" class="icon_parkhaus">
-             <h2>Parkhaus Storchen</h2>
+            <span class="titel_parkhaus">Parkhaus Storchen</span>
             <div class="status"></div>
         </button>
      </section>
